add_executable(tst_file tst_file.cpp)
target_link_libraries(tst_file PRIVATE KDCore doctest::doctest)
get_filename_component(ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../assets/ ABSOLUTE)
target_compile_definitions(tst_file PRIVATE ASSETS="${ASSETS_DIR}/" TST_DIR="${CMAKE_BINARY_DIR}/bin/")
doctest_discover_tests(tst_file ADD_LABELS 1 PROPERTIES LABELS "KDCore")
